--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,7 @@ $lt-gray: #ddd;
 $background-dark: #512DA8;
 $background-light: #9575CD;
 $background-pale: #D1C4E9;
+$white: floralwhite;
 
 // Height variables
 $carousel-item-height: 300px;
@@ -73,4 +74,23 @@ body{
     position: absolute;
     bottom: 0px;
     z-index: 1;
+}
+
+.modal {
+    .modal-header {
+        background: $background-dark;
+        color:$white;
+        
+        button {
+            color:$white;
+        }
+    }
+
+    
+
+
+.modal-body {
+    background: $background-pale;
+}
+
 }
